<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.ResetPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/resetPasswordToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boundary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme">

            <TextView
                android:id="@+id/resetPasswordToolbarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:text="@string/reset_password"
                android:textColor="@color/loginTextColor"
                android:textSize="@dimen/_20"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/resetPasswordImageView"
        android:layout_width="@dimen/_250"
        android:layout_height="@dimen/_250"
        android:layout_marginTop="55dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/resetPasswordImageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMobileNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/loginTextColor"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/loginTextColor"
                android:textColorHint="@color/loginTextColor"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/loginBtnColor"
                android:text="Send"
                android:textSize="20sp"
                android:layout_margin="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/Verification_Code"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/loginTextColor"
                android:textColorHint="@color/loginTextColor"
                app:layout_constraintTop_toBottomOf="@id/edtMobileNum"
                app:passwordToggleEnabled="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/loginTextColor"
                android:textColorHint="@color/loginTextColor"
                app:layout_constraintTop_toBottomOf="@id/edtVerificationCode"
                app:passwordToggleEnabled="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/loginTextColor"
                android:textColorHint="@color/loginTextColor"
                app:layout_constraintTop_toBottomOf="@id/edtPassword"
                app:passwordToggleEnabled="true" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="60dp"
        android:background="@color/loginBtnColor"
        android:text="@string/reset_password"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>