<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/homeAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/homeToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boundary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/AppTheme"
                app:title="@string/royal_clips"
                app:titleTextColor="@color/loginTextColor">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/homeImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/homeimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeAppBarLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/loginTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeImage">

            <View
                android:id="@+id/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/loginBtnColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider_vertical"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="@color/loginBtnColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvBookAppointment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="@color/backgroundColor"
                app:layout_constraintBottom_toTopOf="@id/divider_horizontal"
                app:layout_constraintEnd_toStartOf="@id/divider_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_bookmark_added_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:fontFamily="cursive"
                    android:text="@string/book_appointment"
                    android:textColor="@color/loginTextColor"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvService"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="@color/backgroundColor"
                app:layout_constraintBottom_toTopOf="@id/divider_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider_vertical"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_content_cut_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:fontFamily="cursive"
                    android:text="@string/our_services"
                    android:textColor="@color/loginTextColor"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvOpenShop"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="@color/backgroundColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divider_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_store_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_shop_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:fontFamily="cursive"
                    android:textColor="@color/purple_200"
                    android:textSize="25sp"
                    tools:text="@string/shop_open" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressBar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:indeterminate="true"
                    app:indicatorColor="@color/loginBtnColor"
                    app:indicatorDirectionCircular="clockwise"
                    app:indicatorSize="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:trackColor="@color/backgroundColor"
                    app:trackThickness="20dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvExploreMore"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="@color/backgroundColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider_vertical"
                app:layout_constraintTop_toBottomOf="@id/divider_horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_more_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:fontFamily="cursive"
                    android:text="@string/explore_more"
                    android:textColor="@color/loginTextColor"
                    android:textSize="25sp" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_drawer_nav" />
</androidx.drawerlayout.widget.DrawerLayout>